removed featureIDE from tests